--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main{
     padding: 2rem 0;
     height: 100vh;
     background: rgb(55,201,69);
-    background: linear-gradient(180deg, rgb(51, 177, 63) 15%, rgba(219,219,219,1) 15%);
+    background: linear-gradient(180deg, #04a784 15%, rgba(219,219,219,1) 15%);
 }
 
 main p {
@@ -45,7 +45,7 @@ main p {
 
 /* CONTACTS SECTION STYLE */
 .contact_wrapper {
-    overflow: scroll;
+    
 }
 
 /* HEADER */
@@ -140,7 +140,7 @@ main p {
 .contact_cards_wrapper {
     border-right: solid 1px var(--icons_color);
     background-color: whitesmoke;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 
@@ -222,7 +222,8 @@ main p {
 }
 
 .message {
-    padding: 0.5rem 0.8rem;
+    max-width: 75%;
+    padding: 0.5rem 4rem 0.5rem 0.8rem;
     border-radius: 5px;
     position: relative;
     margin-bottom: 0.6rem;
