--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main{
     padding: 2rem 0;
     height: 100vh;
     background: rgb(55,201,69);
-    background: linear-gradient(180deg, #04a784 70px, rgba(219,219,219,1) 15%);
+    background: linear-gradient(180deg, #04a784 140px, rgba(219,219,219,1) 140px);
 }
 
 main p {
@@ -225,6 +225,57 @@ main p {
     margin-bottom: 0.6rem;
 }
 
+.message_info i {
+    display: none;
+    position: absolute;
+    height: 100%;
+    z-index: 2;
+    color: var(--icons_color);
+    top: 0px;
+    right: 5px;
+    cursor: pointer;
+    
+}
+
+.received .message_info i{
+    background: radial-gradient(circle, whitesmoke 22%, rgba(219,219,219,0) 73%);
+}
+
+.sent .message_info i{
+    background: radial-gradient(circle, rgba(153,240,153,1) 22%, rgba(219,219,219,0) 73%);
+}
+
+.message:hover .message_info i {
+    
+    display: block;
+    /* display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: absolute;
+    right: 5px;
+    transform: translateX(-10%);
+    cursor: pointer; */
+}
+
+.message_info .info_list {
+    position: absolute;
+    z-index: 99999;
+    right: 5px;
+    top: 20px;
+    background-color: #eaeaea;
+    color: rgb(29, 28, 28);
+    padding: 0.5rem;
+}
+
+.message_info .info_list li {
+    border-top: solid lightgrey 1px;
+    padding: 8px 0;
+    cursor: pointer;
+}
+
+.message_info .info_list li:first-child {
+    border-top: 0px;
+}
 .sent {
     align-self: flex-end;
     background-color: rgb(153, 240, 153);
